--- a/complex_neo4j_graph.html
+++ b/complex_neo4j_graph.html
@@ -33,7 +33,7 @@
 
              #mynetwork {
                  width: 100%;
-                 height: 600px;
+                 height: 700px;
                  background-color: #222222;
                  border: 1px solid lightgray;
                  position: relative;
@@ -88,8 +88,8 @@
                   
 
                   // parsing and collecting nodes and edges from the python
-                  nodes = new vis.DataSet([{"color": "#97c2fc", "font": {"color": "white"}, "id": "Alice", "label": "Alice", "shape": "dot"}, {"color": "#97c2fc", "font": {"color": "white"}, "id": "Bob", "label": "Bob", "shape": "dot"}]);
-                  edges = new vis.DataSet([{"from": "Alice", "title": "KNOWS", "to": "Bob"}]);
+                  nodes = new vis.DataSet([{"color": "#66ccff", "font": {"color": "white"}, "id": "Alice", "label": "Alice", "shape": "dot", "size": 25}, {"color": "#66ccff", "font": {"color": "white"}, "id": "Bob", "label": "Bob", "shape": "dot", "size": 25}, {"color": "#ffcc66", "font": {"color": "white"}, "id": "Acme Corp", "label": "Acme Corp", "shape": "dot", "size": 40}, {"color": "#66ccff", "font": {"color": "white"}, "id": "Carol", "label": "Carol", "shape": "dot", "size": 25}, {"color": "#ffcc66", "font": {"color": "white"}, "id": "Globex Inc.", "label": "Globex Inc.", "shape": "dot", "size": 40}, {"color": "#66ccff", "font": {"color": "white"}, "id": "Dave", "label": "Dave", "shape": "dot", "size": 25}, {"color": "#ffcc66", "font": {"color": "white"}, "id": "Initech", "label": "Initech", "shape": "dot", "size": 40}]);
+                  edges = new vis.DataSet([{"color": "#aaaaaa", "from": "Alice", "title": "KNOWS", "to": "Bob"}, {"color": "#aaaaaa", "from": "Alice", "title": "WORKS_AT", "to": "Acme Corp"}, {"color": "#aaaaaa", "from": "Bob", "title": "KNOWS", "to": "Carol"}, {"color": "#aaaaaa", "from": "Bob", "title": "WORKS_AT", "to": "Globex Inc."}, {"color": "#aaaaaa", "from": "Carol", "title": "KNOWS", "to": "Alice"}, {"color": "#aaaaaa", "from": "Carol", "title": "WORKS_AT", "to": "Acme Corp"}, {"color": "#aaaaaa", "from": "Dave", "title": "KNOWS", "to": "Bob"}, {"color": "#aaaaaa", "from": "Dave", "title": "WORKS_AT", "to": "Initech"}]);
 
                   nodeColors = {};
                   allNodes = nodes.get({ returnType: "Object" });
@@ -100,35 +100,7 @@
                   // adding nodes and edges to the graph
                   data = {nodes: nodes, edges: edges};
 
-                  var options = {
-    "configure": {
-        "enabled": false
-    },
-    "edges": {
-        "color": {
-            "inherit": true
-        },
-        "smooth": {
-            "enabled": true,
-            "type": "dynamic"
-        }
-    },
-    "interaction": {
-        "dragNodes": true,
-        "hideEdgesOnDrag": false,
-        "hideNodesOnDrag": false
-    },
-    "physics": {
-        "enabled": true,
-        "stabilization": {
-            "enabled": true,
-            "fit": true,
-            "iterations": 1000,
-            "onlyDynamicEdges": false,
-            "updateInterval": 50
-        }
-    }
-};
+                  var options = {"nodes": {"font": {"size": 16, "color": "white"}, "borderWidth": 2}, "edges": {"color": {"color": "#aaaaaa", "highlight": "#ff0000"}, "smooth": false}, "physics": {"stabilization": true, "barnesHut": {"gravitationalConstant": -8000, "springConstant": 0.002, "springLength": 150}}};
 
                   
 
